--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/xuhaiming/ShimoPoster#readme",
   "dependencies": {
     "express": "^4.13.4",
+    "express-session": "^1.13.0",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-router": "^2.4.1"
