--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "An application which allow user or organization to post Shimo document to Github Pages",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -28,6 +29,7 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
+    "express-session": "^1.13.0",
     "mongoose": "^4.4.19",
     "shimo": "^1.4.0",
     "webpack": "^1.13.1"
